<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.benzino.buzz.SearchActivity">

    <EditText
        android:id="@+id/activity_search_searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/search_hint"/>

    <Button
        android:id="@+id/activity_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:background="@drawable/button_bg"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/activity_search_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:background="@drawable/button_bg"
        android:padding="8dp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>
